---------------------------------------------------------------------------------------------------
Version: 2.0.21
Date: 03. 08. 2025.
  Changes:
    - Fix quality management in Input component
---------------------------------------------------------------------------------------------------
Version: 2.0.20
Date: 21. 06. 2025.
  Changes:
    - Fix compatibility with  https://mods.factorio.com/mod/EverythingOnNauvis
---------------------------------------------------------------------------------------------------
Version: 2.0.19
Date: 13. 04. 2025.
  Changes:
    - Add import filter from factory graph in wireless combinator
---------------------------------------------------------------------------------------------------
Version: 2.0.18
Date: 28. 03. 2025.
  Changes:
    - Add icon input in text field
  Bugfixes:
    - Fix meta combinator when no signal is present
---------------------------------------------------------------------------------------------------
Version: 2.0.17
Date: 13. 03. 2025.
  Bugfixes:
    - Fix teleportation on a space platform
---------------------------------------------------------------------------------------------------
Version: 2.0.16
Date: 08. 03. 2025.
  Bugfixes:
    - Fix crash with Factorissimo 3
---------------------------------------------------------------------------------------------------
Version: 2.0.15
Date: 28. 02. 2025.
  Changes:
    - Add the long range wireless combinator. This combinator has a channel name. \
      All combinators with the same channel are connected together with red and green wires (selectable).
    - Add a GUI panel to display the signals in channels. Add a button in toolbar to display GUI panel.
    - Fix meta-combinator
    - Manage channel in parameter GUI
    - Fix planet import change in group of a request on a space hub
---------------------------------------------------------------------------------------------------
Version: 2.0.14
Date: 19. 02. 2025.
  Bugfixes: