@@ -9,9 +9,8 @@
   "factorio_version": "2.0",
   "dependencies": [
 		"base >= 2.0.0" ,
-    "? IndustrialDisplayPlates",
-    "? Squeak Through",
+    "? DisplayPlatesForked",
     "flib >= 0.11.2",
-    "? PickerDollies"
+    "? even-pickier-dollies"
 	]
 }
