@@ -3,6 +3,8 @@ Version: 2.0.21
 Date: 03. 08. 2025.
   Changes:
     - Fix quality management in Input component
+    - Add compatibility with DisplayPlatesForked
+    - Fix dependencies
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.20
 Date: 21. 06. 2025.
